Practicamente todas las vistas de todas las clases y todo los arcvhivos a solicitud

--- a/MVC_MultitecUA/Views/Evento/PorFiltro.cshtml
+++ b/MVC_MultitecUA/Views/Evento/PorFiltro.cshtml
@@ -44,5 +44,5 @@
 </div>
 <p>
     <!--Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |-->
-    @Html.ActionLink("Volver a la lista", "Index")
+    @Html.ActionLink("Volver a la lista", "Index", new { @class = "btn btn-primary" })
 </p>
