--- a/MVC_MultitecUA/Views/Evento/VistaUsuario/FiltroAvanzado.cshtml
+++ b/MVC_MultitecUA/Views/Evento/VistaUsuario/FiltroAvanzado.cshtml
@@ -33,5 +33,5 @@
     }
 </div>
 <p>
-    @Html.ActionLink("Volver a la lista", "TodosEventos")
+    @Html.ActionLink("Volver a la lista", "TodosEventos", new { @class = "btn btn-primary" })
 </p>
