--- a/MVC_MultitecUA/Views/Proyecto/Details.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/Details.cshtml
@@ -144,6 +144,7 @@
     </div>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Volver a la lista", "Index")
+    @Html.ActionLink("Volver a la lista", "Index") |
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id })
+
 </p>
