--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/GestionModeradores.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/GestionModeradores.cshtml
@@ -31,7 +31,7 @@
             <div class="form-horizontal">
                 <label>Agregar Moderador:</label>
                 @Html.DropDownList("Moderador", new SelectList((System.Collections.IEnumerable)ViewData["listaUsuariosAgregar"]), new { @class = "form-control" })
-                <input type="submit" value="Agregar" class="btn btn-default" />
+                <input type="submit" value="Agregar" class="btn btn-warning" />
             </div>
         }
 
@@ -41,11 +41,12 @@
             <div class="form-horizontal">
                 <label>Eliminar Moderador:</label>
                 @Html.DropDownList("Moderador", new SelectList((System.Collections.IEnumerable)ViewData["listaUsuariosEliminar"]), new { @class = "form-control" })
-                <input type="submit" value="Eliminar" class="btn btn-default" />
+                <input type="submit" value="Eliminar" class="btn btn-danger" />
             </div>
         }
     </div>
 </div>
 <p>
-    @Html.ActionLink("Volver", "Detalles", new { id = Model.Id })
+    <br />
+    @Html.ActionLink("Volver", "Detalles", new { id = Model.Id }, new { @class = "btn btn-primary" })
 </p>
