--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/ProyectosPresentados.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/ProyectosPresentados.cshtml
@@ -65,38 +65,42 @@
         </div>
     }
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Estado)
-        </th>
-        <th>
-            Eventos
-        </th>
-    </tr>
+<table class="table table-hover text-center">
+    <thead style="background-color: gainsboro;">
+        <tr>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Nombre)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Descripcion)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Estado)
+            </th>
+            <th>
+                Eventos
+            </th>
+        </tr>
+    </thead>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.ActionLink(item.Nombre, "Detalles", new { id = item.Id })
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>
-            <th>
-                @Html.DisplayFor(model => item.Estado)
-            </th>
-            <th>
-                @Html.ActionLink("Eventos", "porProyecto", "Evento", new { id = item.Id }, null)
-            </th>
-        </tr>
+        <tbody onclick="window.location='/Proyecto/Detalles?id='+@item.Id" style="cursor:pointer;">
+            <tr>
+                <td>
+                    @Html.ActionLink(item.Nombre, "Detalles", new { id = item.Id })
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descripcion)
+                </td>
+                <th>
+                    @Html.DisplayFor(model => item.Estado)
+                </th>
+                <th>
+                    @Html.ActionLink("Eventos", "porProyecto", "Evento", new { id = item.Id }, null)
+                </th>
+            </tr>
+        </tbody>
     }
 
 </table>
@@ -144,4 +148,9 @@
             }
         }
     </p>
+
+    <p>
+        @Html.ActionLink("Inicio", "../", "",  new { @class = "btn btn-primary" })
+    </p>
+
 }
