--- a/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Borrar.cshtml
+++ b/MVC_MultitecUA/Views/Proyecto/VistaUsuario/Borrar.cshtml
@@ -41,9 +41,9 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Borrar" class="btn btn-default" /> |
-            @Html.ActionLink("Volver", "Detalles", new { id = Model.Id})
-        </div>
+    <div class="form-actions no-color">
+        @Html.ActionLink("Volver", "Detalles", new { id = Model.Id }, new { @class = "btn btn-primary" }) |
+        <input type="submit" value="Borrar" class="btn btn-danger" />
+    </div>
     }
 </div>
