--- a/MVC_MultitecUA/Views/Solicitud/FiltroUsuarioProyectoEstado.cshtml
+++ b/MVC_MultitecUA/Views/Solicitud/FiltroUsuarioProyectoEstado.cshtml
@@ -9,21 +9,11 @@
 <p class="text-center">
     <label>@Html.ActionLink("Inicio", "Index", "Home")</label><span> >> </span><label>@Html.ActionLink("Solicitudes", "Index")</label><span> >> </span><label>@ViewBag.Title</label>
 </p>
-
 <p>
     <h3>Filtros:</h3>
     @using (Html.BeginForm("FiltroUsuarioProyectoEstado", "Solicitud"))
     {
-        if (TempData["mal"] != null)
-        {
-            <p class="text-danger" style="margin-left: 1em;"><span class="glyphicon glyphicon-remove"></span> @TempData["mal"] </p>
-            TempData.Remove("mal");
-        }
-        else if (TempData["bien"] != null)
-        {
-                <p class="text-success" style="margin-left: 1em;"><span class="glyphicon glyphicon-check"></span> @TempData["bien"] </p>
-            TempData.Remove("bien");
-        }
+
 
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -40,36 +30,54 @@
                 </div>
             </div>
         </div>
-     }
+    }
+</p>
+<p>
+    @Html.ActionLink("Nueva Solicitud", "Create")
 </p>
 
-        <p>
-            @Html.ActionLink("Nueva Solicitud", "Create")
-        </p>
-        <table class="table">
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Id)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Nick_Solicitante)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Nombre_Proyecto)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Estado)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Fecha)
-                </th>
-                <th>
-                    Acciones
-                </th>
-            </tr>
+@{
+    if (TempData["mal"] != null)
+    {
+        <h3 class="text-danger"><span class="glyphicon glyphicon-remove"></span> @TempData["mal"] </h3>
+        TempData.Remove("mal");
+    }
+    else if (TempData["bien"] != null)
+    {
+        <h3 class="text-success"><span class="glyphicon glyphicon-check"></span> @TempData["bien"] </h3>
+        TempData.Remove("bien");
+    }
+}
+
+
+
+        <table class="table table-hover text-center">
+            <thead style="background-color: gainsboro;">
+                <tr>
+                    <th class="text-center">
+                        @Html.DisplayNameFor(model => model.Id)
+                    </th>
+                    <th class="text-center">
+                        @Html.DisplayNameFor(model => model.Nick_Solicitante)
+                    </th>
+                    <th class="text-center">
+                        @Html.DisplayNameFor(model => model.Nombre_Proyecto)
+                    </th>
+                    <th class="text-center">
+                        @Html.DisplayNameFor(model => model.Estado)
+                    </th>
+                    <th class="text-center">
+                        @Html.DisplayNameFor(model => model.Fecha)
+                    </th>
+                    <th class="text-center">
+                        Acciones
+                    </th>
+                </tr>
+            </thead>
 
             @foreach (var item in Model)
             {
+            <tbody onclick="window.location='/Solicitud/Details?id='+@item.Id" style="cursor:pointer;">
                 <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.Id)
@@ -92,48 +100,49 @@
                         @Html.ActionLink("Modificar estado", "Edit", new { id = item.Id })
                     </td>
                 </tr>
-            }
+            </tbody>
+                    }
 
-        </table>
+            </table>
 
-        @{
-            /* La página que me llega del controlador es una unidad menos de lo que muestro por pantalla (la 0 es la 1) */
-            var siguiente = (int)ViewData["pag"] + 1;
-            var anterior = siguiente - 2;
-            var numPags = (int)ViewData["numeroPaginas"] + 1;
+@{
+    /* La página que me llega del controlador es una unidad menos de lo que muestro por pantalla (la 0 es la 1) */
+    var siguiente = (int)ViewData["pag"] + 1;
+    var anterior = siguiente - 2;
+    var numPags = (int)ViewData["numeroPaginas"] + 1;
+}
+<p class="text-center">
+    @{
+        if (siguiente > 1)
+        {
+            <label>@Html.ActionLink("Primera", "Index", new { pag = 0 })</label>
+            <span>|</span>
+            <label>@Html.ActionLink("Anterior", "Index", new { pag = anterior })</label>
         }
-        <p class="text-center">
-            @{
-                if (siguiente > 1)
-                {
-                    <label>@Html.ActionLink("Primera", "Index", new { pag = 0 })</label>
-                    <span>|</span>
-                    <label>@Html.ActionLink("Anterior", "Index", new { pag = anterior })</label>
-                }
-                else
-                {
-                    <span>Primera</span>
-                    <span>|</span>
-                    <span>Anterior</span>
-                }
-            }
-
+        else
+        {
+            <span>Primera</span>
             <span>|</span>
-            <label>Página @siguiente de @numPags</label>
-            <span>|</span>
+            <span>Anterior</span>
+        }
+    }
 
-            @{
-                if (siguiente < numPags)
-                {
-                    <label>@Html.ActionLink("Siguiente", "Index", new { pag = siguiente })</label>
-                    <span>|</span>
-                    <label>@Html.ActionLink("Última", "Index", new { pag = numPags - 1 })</label>
-                }
-                else
-                {
-                    <span>Siguiente</span>
-                    <span>|</span>
-                    <span>Última</span>
-                }
-            }
-        </p>
+    <span>|</span>
+    <label>Página @siguiente de @numPags</label>
+    <span>|</span>
+
+    @{
+        if (siguiente < numPags)
+        {
+            <label>@Html.ActionLink("Siguiente", "Index", new { pag = siguiente })</label>
+            <span>|</span>
+            <label>@Html.ActionLink("Última", "Index", new { pag = numPags - 1 })</label>
+        }
+        else
+        {
+            <span>Siguiente</span>
+            <span>|</span>
+            <span>Última</span>
+        }
+    }
+</p>
