--- a/MVC_MultitecUA/Views/Usuario/VistaUsuario/Listado.cshtml
+++ b/MVC_MultitecUA/Views/Usuario/VistaUsuario/Listado.cshtml
@@ -51,53 +51,60 @@
         </div>
     }    
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FechaAlta)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Nick)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Rol)
-        </th>
-        <th>
-            Proyectos en los que participa
-        </th>
-    </tr>
+<table class="table table-hover text-center">
+    <thead style="background-color: gainsboro;">
+        <tr>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Nombre)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.FechaAlta)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Nick)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Rol)
+            </th>
+            <th class="text-center">
+                Proyectos en los que participa
+            </th>
+        </tr>
+    </thead>
 
-	@foreach (var item in Model)
-	{
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FechaAlta)
-        </td>
-        <td>
-            @Html.ActionLink(item.Nick, "Detalles", new { nick = item.Nick })
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rol)
-        </td>
-        <td>
-            @Html.ActionLink("Proyectos", "MisProyectos", "Proyecto", new { nick = item.Nick }, null)
-        </td>
-    </tr>
-	}
+    @foreach (var item in Model)
+    {
+        
+        <tbody onclick="window.location='/Usuario/Detalles?nick='+@item.Nick" style="cursor:pointer;">
 
-</table>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nombre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FechaAlta)
+                </td>
+                <td>
+                    @Html.ActionLink(item.Nick, "Detalles", new { nick = item.Nick })
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Rol)
+                </td>
+                <td>
+                    @Html.ActionLink("Proyectos", "MisProyectos", "Proyecto", new { nick = item.Nick }, null)
+                </td>
+            </tr>
+        </tbody>
+        }
+
+
+    </table>
 
 @{
 	/* La página que me llega del controlador es una unidad menos de lo que muestro por pantalla (la 0 es la 1) */
@@ -139,4 +146,8 @@
 			<span>Última</span>
 		}
 	}
+</p>
+
+<p>
+    @Html.ActionLink("Inicio", "../", "", new { @class = "btn btn-primary" })
 </p>
