--- a/MVC_MultitecUA/Views/Solicitud/Details.cshtml
+++ b/MVC_MultitecUA/Views/Solicitud/Details.cshtml
@@ -96,6 +96,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Volver a la lista", "Index")
+    @Html.ActionLink("Volver a la lista", "Index") |
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id })
 </p>
